@@ -1,5 +1,15 @@
 2002-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>
 
+	* gcc -Wall -Werror clean
+	* file.c (loadHTMLstream): unused variable `p'
+	* news.c (news_command): unused variable `c'
+		(news_open): unused variable `tmp'
+		(readNewsgroup): volatile page, qgroup, flag, start, end
+				uninitialized variable `page'
+	* url.c (openURL): unused variable `fw', `r', `stream'
+
+2002-12-28  Fumitoshi UKAI  <ukai@debian.or.jp>
+
 	* rc: nntpserver, nntpmode, max_news
 
 2002-12-28  Hironori SAKAMOTO <hsaka@mth.biglobe.ne.jp>
